@@ -1,5 +1,6 @@
 package com.group2.Tiger_Talks.backend.service._implementation.Post;
 
+import com.group2.Tiger_Talks.backend.model.Notification.Notification;
 import com.group2.Tiger_Talks.backend.model.Post.Post;
 import com.group2.Tiger_Talks.backend.model.Post.PostComment;
 import com.group2.Tiger_Talks.backend.model.Post.PostCommentDTO;
@@ -8,6 +9,7 @@ import com.group2.Tiger_Talks.backend.model.User.UserProfileDTO;
 import com.group2.Tiger_Talks.backend.repository.Post.PostCommentRepository;
 import com.group2.Tiger_Talks.backend.repository.Post.PostRepository;
 import com.group2.Tiger_Talks.backend.repository.User.UserProfileRepository;
+import com.group2.Tiger_Talks.backend.service.Notification.NotificationService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -38,15 +40,24 @@ public class PostCommentServiceImplTest {
     @Mock
     private PostRepository postRepository;
 
+    @Mock
+    private NotificationService notificationService;
+
     @InjectMocks
     private PostCommentServiceImpl postCommentService;
 
     private UserProfile userA;
     private UserProfile userB;
+    private Post post;
+    private PostCommentDTO postCommentDTO1;
+    private PostComment postComment1;
+    private PostComment postComment2;
+
 
     @BeforeEach
     public void setUp() {
         MockitoAnnotations.initMocks(this);
+
         userA = new UserProfile(
                 "userD",
                 "number",
@@ -77,69 +88,125 @@ public class PostCommentServiceImplTest {
                         "What is the name of the hospital where you were born?"
                 }
         );
-    }
 
-
-    @Test
-    public void testAddComment() {
-        // Preparing test data
-        Post post = new Post();
+        post = new Post();
         post.setPostId(1);
         post.setContent("test content");
         post.setUserProfile(userB);
 
-
-        UserProfile commentSenderUserProfile = userA;
-        UserProfile postSenderUserProfile = userB;
-
         UserProfileDTO commentSenderDTO = new UserProfileDTO(12, "d@dal.ca", "pending", false, "default", "offline", "userD", null, "private", "Male", "userD", "number", "https://res.cloudinary.com/dp4j9a7ry/image/upload/v1719765852/rvfq7rtgnni1ahktelff.jpg", "user", null);
         UserProfileDTO postSenderDTO = new UserProfileDTO(12, "hn582183@dal.ca", "pending", true, "default", "offline", "a", "", "private", "other", "Hong", "Huang", "https://res.cloudinary.com/dp4j9a7ry/image/upload/v1720207705/bwitpvkdv32sv3uvfsab.gif", "user", null);
 
-        PostCommentDTO postCommentDTO = new PostCommentDTO();
-        postCommentDTO.setContent("This is a comment.");
-        postCommentDTO.setTimestamp(LocalDateTime.of(2024, 7, 5, 12, 0));
-        postCommentDTO.setCommentSenderUserProfileDTO(commentSenderDTO);
-        postCommentDTO.setPostSenderUserProfileDTO(postSenderDTO);
-        postCommentDTO.setPostId(1);
+        postCommentDTO1 = new PostCommentDTO();
+        postCommentDTO1.setContent("This is a comment.");
+        postCommentDTO1.setTimestamp(LocalDateTime.of(2024, 7, 5, 12, 0));
+        postCommentDTO1.setCommentSenderUserProfileDTO(commentSenderDTO);
+        postCommentDTO1.setPostSenderUserProfileDTO(postSenderDTO);
+        postCommentDTO1.setPostId(1);
 
-        PostComment postComment = new PostComment();
-        postComment.setCommentId(1);
-        postComment.setContent(postCommentDTO.getContent());
-        postComment.setTimestamp(postCommentDTO.getTimestamp());
-        postComment.setCommentSenderUserProfile(commentSenderUserProfile);
-        postComment.setPost(post);
-        postComment.setPostSenderUserProfile(postSenderUserProfile);
+        PostCommentDTO postCommentDTO2 = new PostCommentDTO();
+        postCommentDTO2.setContent("This is another comment.");
+        postCommentDTO2.setTimestamp(LocalDateTime.of(2024, 7, 5, 12, 30));
+        postCommentDTO2.setCommentSenderUserProfileDTO(commentSenderDTO);
+        postCommentDTO2.setPostSenderUserProfileDTO(postSenderDTO);
+        postCommentDTO2.setPostId(1);
 
-        // Simulating dependent behaviors
+        postComment1 = new PostComment();
+        postComment1.setCommentId(1);
+        postComment1.setContent(postCommentDTO1.getContent());
+        postComment1.setTimestamp(postCommentDTO1.getTimestamp());
+        postComment1.setCommentSenderUserProfile(userA);
+        postComment1.setPost(post);
+        postComment1.setPostSenderUserProfile(userB);
+
+        postComment2 = new PostComment();
+        postComment2.setCommentId(2);
+        postComment2.setContent(postCommentDTO2.getContent());
+        postComment2.setTimestamp(postCommentDTO2.getTimestamp());
+        postComment2.setCommentSenderUserProfile(userA);
+        postComment2.setPost(post);
+        postComment2.setPostSenderUserProfile(userB);
+    }
+
+    /**
+     * Test case for addComment
+     */
+    @Test
+    public void addComment_success_return_check() {
         when(postRepository.findById(1)).thenReturn(Optional.of(post));
-        when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(commentSenderUserProfile));
-        when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(postSenderUserProfile));
-        when(postCommentRepository.save(any(PostComment.class))).thenReturn(postComment);
+        when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+        when(postCommentRepository.save(any(PostComment.class))).thenReturn(postComment1);
+        when(notificationService.createNotification(any(Notification.class))).thenReturn(Optional.empty());
 
-        // Calling service
-        PostCommentDTO result = postCommentService.addComment(postCommentDTO);
-
-        // results validation
+        PostCommentDTO result = postCommentService.addComment(postCommentDTO1);
         assertNotNull(result);
-        assertEquals(postCommentDTO.getContent(), result.getContent());
-        assertEquals(postCommentDTO.getTimestamp(), result.getTimestamp());
-        assertEquals(postCommentDTO.getCommentSenderUserProfileDTO().email(), result.getCommentSenderUserProfileDTO().email());
-        assertEquals(postCommentDTO.getPostSenderUserProfileDTO().email(), result.getPostSenderUserProfileDTO().email());
-
+        assertEquals(postCommentDTO1.getContent(), result.getContent());
     }
 
     @Test
-    public void testAddCommentPostNotFound() {
-        PostCommentDTO postCommentDTO = new PostCommentDTO();
-        postCommentDTO.setPostId(1);
+    public void addComment_success_timestamps_check() {
+        when(postRepository.findById(1)).thenReturn(Optional.of(post));
+        when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+        when(postCommentRepository.save(any(PostComment.class))).thenReturn(postComment1);
+        when(notificationService.createNotification(any(Notification.class))).thenReturn(Optional.empty());
+
+        PostCommentDTO result = postCommentService.addComment(postCommentDTO1);
+        assertEquals(postCommentDTO1.getTimestamp(), result.getTimestamp());
+    }
+
+    @Test
+    public void addComment_success_commentSenderEmail_check() {
+        when(postRepository.findById(1)).thenReturn(Optional.of(post));
+        when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+        when(postCommentRepository.save(any(PostComment.class))).thenReturn(postComment1);
+        when(notificationService.createNotification(any(Notification.class))).thenReturn(Optional.empty());
+
+        PostCommentDTO result = postCommentService.addComment(postCommentDTO1);
+        assertEquals(postCommentDTO1.getCommentSenderUserProfileDTO().email(), result.getCommentSenderUserProfileDTO().email());
+    }
+
+    @Test
+    public void addComment_success_postSenderEmail_check() {
+        when(postRepository.findById(1)).thenReturn(Optional.of(post));
+        when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+        when(postCommentRepository.save(any(PostComment.class))).thenReturn(postComment1);
+        when(notificationService.createNotification(any(Notification.class))).thenReturn(Optional.empty());
+
+        PostCommentDTO result = postCommentService.addComment(postCommentDTO1);
+        assertEquals(postCommentDTO1.getPostSenderUserProfileDTO().email(), result.getPostSenderUserProfileDTO().email());
+    }
+
+    @Test
+    public void addComment_success_notification_check() {
+        when(postRepository.findById(1)).thenReturn(Optional.of(post));
+        when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+        when(postCommentRepository.save(any(PostComment.class))).thenReturn(postComment1);
+        when(notificationService.createNotification(any(Notification.class))).thenReturn(Optional.empty());
+
+        postCommentService.addComment(postCommentDTO1);
+        verify(notificationService, times(1)).createNotification(any(Notification.class));
+    }
+
+    @Test
+    public void addComment_postNotFound() {
         when(postRepository.findById(1)).thenReturn(Optional.empty());
-        RuntimeException exception = assertThrows(
-                RuntimeException.class,
-                () -> postCommentService.addComment(postCommentDTO)
-        );
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> postCommentService.addComment(postCommentDTO1));
         assertEquals("Post not found", exception.getMessage());
     }
 
+    @Test
+    public void addComment_senderNotFound() {
+        when(postRepository.findById(1)).thenReturn(Optional.of(post));
+        when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.empty());
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> postCommentService.addComment(postCommentDTO1));
+    }
+
+    // ???????????????
     @Test
     public void testAddCommentSenderNotFound() {
         Post post = new Post();
@@ -160,93 +227,195 @@ public class PostCommentServiceImplTest {
         assertEquals("Comment sender user profile not found", exception.getMessage());
     }
 
+    /**
+     * Test case for getCommentsByPostId
+     */
     @Test
-    public void testGetCommentsByPostId() {
-        // Preparing test data
-        Post post = new Post();
-        post.setPostId(1);
-        post.setContent("test content");
-        post.setUserProfile(userB);
+    public void getCommentsByPostId_oneComment_return_check() {
+        lenient().when(postCommentRepository.findByPost_PostId(1)).thenReturn(List.of(postComment1));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
 
-        UserProfile commentSenderUserProfile = userA;
-        UserProfile postSenderUserProfile = userB;
-
-        PostComment postComment = new PostComment(post, "This is a comment.", commentSenderUserProfile, postSenderUserProfile);
-        postComment.setCommentId(1);
-        postComment.setTimestamp(LocalDateTime.of(2024, 7, 5, 12, 0));
-
-        // Simulating dependent behaviors
-        lenient().when(postCommentRepository.findByPost_PostId(1)).thenReturn(List.of(postComment));
-        lenient().when(userProfileRepository.findById("a@dal.ca")).thenReturn(Optional.of(commentSenderUserProfile));
-        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(postSenderUserProfile));
-
-        // Calling service
         List<PostCommentDTO> result = postCommentService.getCommentsByPostId(1);
-
-        // results validation
         assertNotNull(result);
         assertEquals(1, result.size());
-        PostCommentDTO dto = result.get(0);
-        assertEquals(postComment.getContent(), dto.getContent());
-        assertEquals(postComment.getTimestamp(), dto.getTimestamp());
-        assertEquals(commentSenderUserProfile.getEmail(), dto.getCommentSenderUserProfileDTO().email());
-        assertEquals(postSenderUserProfile.getEmail(), dto.getPostSenderUserProfileDTO().email());
     }
 
     @Test
-    public void testGetCommentsByPostIdNoComments() {
-        when(postCommentRepository.findByPost_PostId(1)).thenReturn(Collections.emptyList());
+    public void getCommentsByPostId_oneComment_comment_check() {
+        lenient().when(postCommentRepository.findByPost_PostId(1)).thenReturn(List.of(postComment1));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
 
         List<PostCommentDTO> result = postCommentService.getCommentsByPostId(1);
+        PostCommentDTO dto = result.get(0);
+        assertEquals(postComment1.getContent(), dto.getContent());
+        assertEquals(postComment1.getTimestamp(), dto.getTimestamp());
+    }
 
+    @Test
+    public void getCommentsByPostId_oneComment_email_check() {
+        lenient().when(postCommentRepository.findByPost_PostId(1)).thenReturn(List.of(postComment1));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+
+        List<PostCommentDTO> result = postCommentService.getCommentsByPostId(1);
+        PostCommentDTO dto = result.get(0);
+        assertEquals(userA.getEmail(), dto.getCommentSenderUserProfileDTO().email());
+        assertEquals(userB.getEmail(), dto.getPostSenderUserProfileDTO().email());
+    }
+
+    @Test
+    public void getCommentsByPostId_twoComments_return_check() {
+        lenient().when(postCommentRepository.findByPost_PostId(1)).thenReturn(List.of(postComment1, postComment2));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+
+        List<PostCommentDTO> result = postCommentService.getCommentsByPostId(1);
+        assertNotNull(result);
+        assertEquals(2, result.size());
+    }
+
+    @Test
+    public void getCommentsByPostId_twoComments_postComment_check() {
+        lenient().when(postCommentRepository.findByPost_PostId(1)).thenReturn(List.of(postComment1, postComment2));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+
+        List<PostCommentDTO> result = postCommentService.getCommentsByPostId(1);
+        PostCommentDTO dto1 = result.get(0);
+        PostCommentDTO dto2 = result.get(1);
+        assertEquals(postComment1.getContent(), dto1.getContent());
+        assertEquals(postComment1.getTimestamp(), dto1.getTimestamp());
+        assertEquals(postComment2.getContent(), dto2.getContent());
+        assertEquals(postComment2.getTimestamp(), dto2.getTimestamp());
+    }
+
+    @Test
+    public void getCommentsByPostId_twoComments_email_check() {
+        lenient().when(postCommentRepository.findByPost_PostId(1)).thenReturn(List.of(postComment1, postComment2));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+
+        List<PostCommentDTO> result = postCommentService.getCommentsByPostId(1);
+        PostCommentDTO dto1 = result.get(0);
+        PostCommentDTO dto2 = result.get(1);
+        assertEquals(userA.getEmail(), dto1.getCommentSenderUserProfileDTO().email());
+        assertEquals(userB.getEmail(), dto1.getPostSenderUserProfileDTO().email());
+        assertEquals(userA.getEmail(), dto2.getCommentSenderUserProfileDTO().email());
+        assertEquals(userB.getEmail(), dto2.getPostSenderUserProfileDTO().email());
+    }
+
+    @Test
+    public void getCommentsByPostId_noComments() {
+        when(postCommentRepository.findByPost_PostId(1)).thenReturn(Collections.emptyList());
+        List<PostCommentDTO> result = postCommentService.getCommentsByPostId(1);
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
 
-
     @Test
-    public void testGetCommentsByPostIdPostNotFound() {
+    public void getCommentsByPostId_postNotFound() {
         lenient().when(postRepository.findById(1)).thenReturn(Optional.empty());
         List<PostCommentDTO> result = postCommentService.getCommentsByPostId(1);
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
 
+    /**
+     * Test case for getAllComments
+     */
     @Test
-    public void testGetAllComments() {
-        // Preparing test data
-        Post post = new Post();
-        post.setPostId(1);
-        post.setContent("test content");
-        post.setUserProfile(userB);
+    public void getAllComments_oneComment_return_check() {
+        lenient().when(postCommentRepository.findAll()).thenReturn(Collections.singletonList(postComment1));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
 
-        UserProfile commentSenderUserProfile = userA;
-        UserProfile postSenderUserProfile = userB;
+        // UserProfile commentSenderUserProfile = userA;
+        // UserProfile postSenderUserProfile = userB;
 
-        PostComment postComment = new PostComment(post, "This is a comment.", commentSenderUserProfile, postSenderUserProfile);
-        postComment.setCommentId(1);
-        postComment.setTimestamp(LocalDateTime.of(2024, 7, 5, 12, 0));
+        // PostComment postComment = new PostComment(post, "This is a comment.", commentSenderUserProfile, postSenderUserProfile);
+        // postComment.setCommentId(1);
+        // postComment.setTimestamp(LocalDateTime.of(2024, 7, 5, 12, 0));
 
-        // Simulating dependent behaviors
-        lenient().when(postCommentRepository.findAll()).thenReturn(List.of(postComment));
-        lenient().when(userProfileRepository.findById("a@dal.ca")).thenReturn(Optional.of(commentSenderUserProfile));
-        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(postSenderUserProfile));
+        // // Simulating dependent behaviors
+        // lenient().when(postCommentRepository.findAll()).thenReturn(List.of(postComment));
+        // lenient().when(userProfileRepository.findById("a@dal.ca")).thenReturn(Optional.of(commentSenderUserProfile));
+        // lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(postSenderUserProfile));
 
         // Calling service
         List<PostCommentDTO> result = postCommentService.getAllComments();
-
-        // results validation
         assertNotNull(result);
         assertEquals(1, result.size());
-        PostCommentDTO dto = result.get(0);
-        assertEquals(postComment.getContent(), dto.getContent());
-        assertEquals(postComment.getTimestamp(), dto.getTimestamp());
-        assertEquals(commentSenderUserProfile.getEmail(), dto.getCommentSenderUserProfileDTO().email());
-        assertEquals(postSenderUserProfile.getEmail(), dto.getPostSenderUserProfileDTO().email());
     }
 
     @Test
-    public void testGetAllCommentsNoComments() {
+    public void getAllComments_oneComment_postComment_check() {
+        lenient().when(postCommentRepository.findAll()).thenReturn(Collections.singletonList(postComment1));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+
+        List<PostCommentDTO> result = postCommentService.getAllComments();
+        PostCommentDTO dto = result.get(0);
+        assertEquals(postComment1.getContent(), dto.getContent());
+        assertEquals(postComment1.getTimestamp(), dto.getTimestamp());
+    }
+
+    @Test
+    public void getAllComments_oneComment_userEmail_check() {
+        lenient().when(postCommentRepository.findAll()).thenReturn(Collections.singletonList(postComment1));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+
+        List<PostCommentDTO> result = postCommentService.getAllComments();
+        PostCommentDTO dto = result.get(0);
+        assertEquals(userA.getEmail(), dto.getCommentSenderUserProfileDTO().email());
+        assertEquals(userB.getEmail(), dto.getPostSenderUserProfileDTO().email());
+    }
+
+    @Test
+    public void getAllComments_twoComments_return_check() {
+        lenient().when(postCommentRepository.findAll()).thenReturn(Arrays.asList(postComment1, postComment2));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+
+        List<PostCommentDTO> result = postCommentService.getAllComments();
+        assertNotNull(result);
+        assertEquals(2, result.size());
+    }
+
+    @Test
+    public void getAllComments_twoComments_postComment_check() {
+        lenient().when(postCommentRepository.findAll()).thenReturn(Arrays.asList(postComment1, postComment2));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+
+        List<PostCommentDTO> result = postCommentService.getAllComments();
+        PostCommentDTO dto1 = result.get(0);
+        PostCommentDTO dto2 = result.get(1);
+        assertEquals(postComment1.getContent(), dto1.getContent());
+        assertEquals(postComment1.getTimestamp(), dto1.getTimestamp());
+        assertEquals(postComment2.getContent(), dto2.getContent());
+        assertEquals(postComment2.getTimestamp(), dto2.getTimestamp());
+    }
+
+    @Test
+    public void getAllComments_twoComments_userEmail_check() {
+        lenient().when(postCommentRepository.findAll()).thenReturn(Arrays.asList(postComment1, postComment2));
+        lenient().when(userProfileRepository.findById("d@dal.ca")).thenReturn(Optional.of(userA));
+        lenient().when(userProfileRepository.findById("hn582183@dal.ca")).thenReturn(Optional.of(userB));
+
+        List<PostCommentDTO> result = postCommentService.getAllComments();
+        PostCommentDTO dto1 = result.get(0);
+        PostCommentDTO dto2 = result.get(1);
+        assertEquals(userA.getEmail(), dto1.getCommentSenderUserProfileDTO().email());
+        assertEquals(userB.getEmail(), dto1.getPostSenderUserProfileDTO().email());
+        assertEquals(userA.getEmail(), dto2.getCommentSenderUserProfileDTO().email());
+        assertEquals(userB.getEmail(), dto2.getPostSenderUserProfileDTO().email());
+    }
+
+    @Test
+    public void getAllComments_noComments() {
         when(postCommentRepository.findAll()).thenReturn(Collections.emptyList());
         List<PostCommentDTO> result = postCommentService.getAllComments();
         assertNotNull(result);
@@ -254,12 +423,11 @@ public class PostCommentServiceImplTest {
     }
 
     @Test
-    public void testGetAllCommentsPostNotFound() {
+    public void getAllComments_postNotFound() {
         lenient().when(postRepository.findById(1)).thenReturn(Optional.empty());
         List<PostCommentDTO> result = postCommentService.getAllComments();
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
-
 
 }
